--- a/src/index.css
+++ b/src/index.css
@@ -73,10 +73,14 @@ section > h2 {
 }
 
 .text-light {
-  color: var(--color-primary);
-  transition: var(--transition);
+  color: var(--color-light);
+  
 }
+a {
+    color: var(--color-primary);
+    transition: var(--transition);
 
+}
 a:hover {
   color: var(--color-white);
 }
