style: estilizando header

--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ img {
 
 /*=====================================RESPONSIVIDADE TABLET=======================*/
 
-@media screen AND (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .container {
     width: var(--container-width-md);
   }
@@ -127,7 +127,7 @@ img {
 
 /*=====================================RESPONSIVIDADE CELULAR=======================*/
 
-@media screen AND (max-width: 600px) {
+@media screen and (max-width: 600px) {
   .container {
     width: var(--container-width-sm);
   }
