--- a/src/components/sobre/sobre.css
+++ b/src/components/sobre/sobre.css
@@ -81,8 +81,11 @@
     width: 50%;
     margin: 2rem auto 4rem;
   }
+  .sobre__conteudo{
+    text-align: center;
+  }
   .sobre__conteudo p {
-    margin: 1rem 0 1.5rem;
+    margin: 1rem 0.5rem 1.5rem;
   }
 }
 
