fix: Corrigindo nome de classe container

--- a/src/components/servicos/servicos.css
+++ b/src/components/servicos/servicos.css
@@ -1,4 +1,4 @@
-.services__container {
+.servicos__container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 3rem;
@@ -45,7 +45,7 @@
 /*=====================================RESPONSIVIDADE TABLET=======================*/
 
 @media screen and (max-width: 1024px) {
-  .services__container {
+  .servicos__container {
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
   }
@@ -57,7 +57,7 @@
 /*=====================================RESPONSIVIDADE CELULAR=======================*/
 
 @media screen and (max-width: 600px) {
-  .services__container {
+  .servicos__container {
     grid-template-columns: 1fr;
     gap: 1.5rem;
   }
