--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -27,6 +27,8 @@
 
 .portfolio__item-cta {
   display: flex;
+  justify-content:center;
+  align-items:center;
   gap: 2rem;
   margin-bottom: 1rem;
 }
