--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@
 
 :root {
   --color-bg: #1f1f38;
-  --color-bg-variant: #2c2c6c;
+  --color-bg-variant: rgba(44,44,108,0.5);
+  --color-bg-hover:rgb(44,44,108);
   --color-primary: #4db5ff;
   --color-primary--variant: rgba(77, 181, 255, 0.4);
   --color-white: #fff;
@@ -53,6 +54,7 @@ h3,
 h4,
 h5 {
   font-weight: 500;
+  font-size: 1rem;
 }
 
 h1 {
@@ -71,6 +73,7 @@ section > h5 {
 section > h2 {
   color: var(--color-primary);
   margin-bottom: 3rem;
+  font-size:2.2rem;
 }
 
 .text-light {
@@ -91,7 +94,7 @@ a:hover {
   display: inline-block;
   color: var(--color-primary);
   padding: 0.75rem 1.2rem;
-  border-radius: 0.4rem;
+  border-radius: 1.5rem;
   cursor: pointer;
   border: 1px solid var(--color-primary);
   transition: var(--transition);
