style: alterando efeito hover

--- a/src/components/contato/contato.css
+++ b/src/components/contato/contato.css
@@ -22,8 +22,8 @@
   transition: var(--transition);
 }
 .contato__opcao:hover {
-  background: transparent;
-  border-color: var(--color-primary-variant);
+  border-color: var(--color-primary);
+  background: var(--color-bg-hover);
 }
 
 .contato__opcao-icon {
