--- a/src/components/servicos/servicos.css
+++ b/src/components/servicos/servicos.css
@@ -4,11 +4,11 @@
   gap: 3rem;
 }
 .servicos {
+  padding: 2.5rem 5rem;
   background: var(--color-bg-variant);
-  border-radius: 0 0 2rem 2rem;
-  border: 1px solid var(--color-primary);
-  height: fit-content;
+  border-radius: 2rem;
   transition: var(--transition);
+  border: 1px solid transparent;
 }
 .servicos:hover {
   border-color: var(--color-primary);
@@ -16,17 +16,11 @@
   cursor: default;
 }
 
-.servicos__head {
-  background: var(--color-primary);
-  padding: 2rem;
-  border-radius: 0 0 2rem 2rem;
-  box-shadow: 0 2rem 1rem rgba(0, 0, 0, 0.1);
-}
-
 .servicos__head h3 {
-  color: var(--color-bg);
-  font-size: 1rem;
+  color: var(--color-primary);
+  font-size: 1.5rem;
   text-align: center;
+  margin-bottom: 2rem;
 }
 .servicos__list {
   padding: 2rem;
